--- a/html/index.html
+++ b/html/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>03</title>
     <meta charset="utf-8">
     <meta content="width=device-width,initial-scale=1.0, user-scalable=no" name="viewport" />
     <meta content="yes" name=" apple-mobile-web-app-capable" />
@@ -8,20 +9,76 @@
     <meta content="black" name=" apple-mobile-web-app-status-bar-style" />
     <meta content="telephone=no" name="format-detection"/>
 
-
+    <script src="../js/jquery-3.3.1.min.js"></script>
+    <script src="../js/swiper.min.js"></script>
+    <script src="../js/swiper.animate1.0.3.min.js"></script>
     <script src="../js/base.min.js"></script>
-
-    <title>03</title>
-
-
+    <link rel="stylesheet" href="../css/swiper.min.css"/>
     <link rel="stylesheet" href="../css/index.css"/>
 
 </head>
 <body>
 
 <img src="../image/1.png" alt="" style="position: fixed;top: .18rem;left: .15rem;height: .37rem;width:1.17rem;"/>
-<div class="floor-1">
+<div class="floor-1" flex="cross:center main:center">
     <img src="../image/2.png" alt="" class="img2"/>
+</div>
+
+<div class="swiper-container">
+    <div class="swiper-wrapper">
+        <div class="swiper-slide" style="background-color: white" flex="dir:top cross:center">
+            <h1 class="h-1">福建移动营业厅</h1>
+            <img src="../image/2.jpg" class="img-1"/>
+            <span class="span-1">首次关注 立领<span class="span-2">100M</span><br/><span class="span-3">识别二维码 关注公众号</span></span>
+        </div>
+        <div class="swiper-slide" style="background-color: white" flex="dir:top cross:center">
+            <h1 class="h-1">福建移动营业厅</h1>
+            <img src="../image/2.jpg" class="img-1"/>
+            <span class="span-1">首次关注 立领<span class="span-2">100M</span><br/><span class="span-3">识别二维码 关注公众号</span></span>
+        </div>
+        <div class="swiper-slide" style="background-color: white" flex="dir:top cross:center">
+            <h1 class="h-1">福建移动营业厅</h1>
+            <img src="../image/2.jpg" class="img-1"/>
+            <span class="span-1">首次关注 立领<span class="span-2">100M</span><br/><span class="span-3">识别二维码 关注公众号</span></span>
+        </div>
+        <div class="swiper-slide" style="background-color: white" flex="dir:top cross:center">
+            <h1 class="h-1">福建移动营业厅</h1>
+            <img src="../image/2.jpg" class="img-1"/>
+            <span class="span-1">首次关注 立领<span class="span-2">100M</span><br/><span class="span-3">识别二维码 关注公众号</span></span>
+        </div>
+        <div class="swiper-slide" style="background-color: white" flex="dir:top cross:center">
+            <h1 class="h-1">福建移动营业厅</h1>
+            <img src="../image/2.jpg" class="img-1"/>
+            <span class="span-1">首次关注 立领<span class="span-2">100M</span><br/><span class="span-3">识别二维码 关注公众号</span></span>
+        </div><div class="swiper-slide" style="background-color: white" flex="dir:top cross:center">
+        <h1 class="h-1">福建移动营业厅</h1>
+        <img src="../image/2.jpg" class="img-1"/>
+        <span class="span-1">首次关注 立领<span class="span-2">100M</span><br/><span class="span-3">识别二维码 关注公众号</span></span>
+    </div><div class="swiper-slide" style="background-color: white" flex="dir:top cross:center">
+        <h1 class="h-1">福建移动营业厅</h1>
+        <img src="../image/2.jpg" class="img-1"/>
+        <span class="span-1">首次关注 立领<span class="span-2">100M</span><br/><span class="span-3">识别二维码 关注公众号</span></span>
+    </div><div class="swiper-slide" style="background-color: white" flex="dir:top cross:center">
+        <h1 class="h-1">福建移动营业厅</h1>
+        <img src="../image/2.jpg" class="img-1"/>
+        <span class="span-1">首次关注 立领<span class="span-2">100M</span><br/><span class="span-3">识别二维码 关注公众号</span></span>
+    </div><div class="swiper-slide" style="background-color: white" flex="dir:top cross:center">
+        <h1 class="h-1">福建移动营业厅</h1>
+        <img src="../image/2.jpg" class="img-1"/>
+        <span class="span-1">首次关注 立领<span class="span-2">100M</span><br/><span class="span-3">识别二维码 关注公众号</span></span>
+    </div>
+
+
+
+
+
+
+
+    </div>
+    <!-- 如果需要分页器 -->
+    <div class="swiper-pagination"></div>
+
+
 </div>
 
 
@@ -30,5 +87,6 @@
 
 
 
+<script src="../js/index.js"></script>
 </body>
 </html>
